--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gardeners/markdown-it-wikilinks": "^1.5.1",
     "@next/font": "13.1.6",
+    "autoprefixer": "^10.4.13",
+    "markdown-it": "^13.0.1",
+    "next": "13.1.6",
+    "postcss": "^8.4.21",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.2.6",
+    "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "eslint-config-next": "13.1.6"
   }
 }
