--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@gardeners/markdown-it-wikilinks": "^1.5.1",
     "@next/font": "13.1.6",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "markdown-it": "^13.0.1",
+    "markdown-it-wikitext": "^1.0.2",
     "next": "13.1.6",
     "postcss": "^8.4.21",
     "react": "18.2.0",
