--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@tailwindcss/typography": "^0.5.9",
+    "@vercel/analytics": "^0.1.8",
     "autoprefixer": "^10.4.13",
     "markdown-it": "^13.0.1",
     "markdown-it-wikitext": "^1.0.2",
