--- a/package.json
+++ b/package.json
@@ -6,19 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"**/*.{js,ts,tsx,md}\""
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "semi": true,
+    "trailingComma": "all",
+    "singleQuote": true
   },
   "dependencies": {
     "@next/font": "13.1.6",
     "@tailwindcss/typography": "^0.5.9",
     "@vercel/analytics": "^0.1.8",
     "autoprefixer": "^10.4.13",
+    "dayjs": "^1.11.7",
     "markdown-it": "^13.0.1",
     "markdown-it-wikitext": "^1.0.2",
-    "next": "13.1.6",
+    "next": "latest",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "simple-git": "^3.16.0",
     "tailwindcss": "^3.2.6",
     "typescript": "4.9.5"
   },
