--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@vercel/analytics": "^0.1.8",
     "autoprefixer": "^10.4.13",
     "dayjs": "^1.11.7",
+    "feed": "^4.2.2",
     "markdown-it": "^13.0.1",
     "markdown-it-wikitext": "^1.0.2",
     "next": "latest",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "simple-git": "^3.16.0",
     "tailwindcss": "^3.2.6",
     "typescript": "4.9.5"
   },
