--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.10",
+    "@headlessui/tailwindcss": "^0.1.2",
+    "@heroicons/react": "^2.0.15",
     "@next/font": "13.1.6",
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@vercel/analytics": "^0.1.8",
     "autoprefixer": "^10.4.13",
@@ -28,6 +32,7 @@
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.0.3",
     "tailwindcss": "^3.2.6",
     "typescript": "4.9.5"
   },
