--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hotkeys-hook": "^4.3.5",
     "swr": "^2.0.3",
     "tailwindcss": "^3.2.6",
     "typescript": "4.9.5"
