--- a/.github/workflows/update_notes.yml
+++ b/.github/workflows/update_notes.yml
@@ -1,4 +1,4 @@
-name: 发布数字花园
+name: 更新笔记目录
 
 on:
   schedule:
@@ -8,7 +8,7 @@ on:
   workflow_dispatch: {}
 
 jobs:
-  build:
+  update:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,4 +27,4 @@ jobs:
         run: git submodule foreach "git checkout main && git pull"
 
       - name: 提交更新后的版本信息
-        run: "git commit -am 'chore: 更新笔记目录' && git push"
+        run: "git commit -am 'chore: 更新笔记目录' && git push || echo '无需更新'"
